projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/MetaMapper_Settings__mdt.object-meta.xml
<CustomObject>
    <description
  >Custom Metadata Type holding all tunable runtime parameters for MetaMapper. A single record named Default is read at the start of each Queueable execution. Admins can adjust these settings without a code deploy. Do not delete the Default record.</description>
    <label>MetaMapper Settings</label>
    <pluralLabel>MetaMapper Settings</pluralLabel>
</CustomObject>