projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Admin_Customized__c.field-meta.xml
<CustomField>
    <fullName>Admin_Customized__c</fullName>
    <description>Set to true when an admin explicitly saves the MetaMapper Settings UI. When false (default, first-install state), createJob() applies conservative sandbox or production default profiles at runtime without mutating this record. Once true, the admin's explicit values take precedence over all runtime profile overrides. Do not edit manually.</description>
    <defaultValue>false</defaultValue>
    <label>Admin Customized</label>
    <type>Checkbox</type>
</CustomField>