projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Cleanup_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>Cleanup_Chunk_Size__c</fullName>
    <description>Number of dependency records deleted per database transaction during the nightly cleanup process. Keep at 2000 or lower to leave sufficient DML row headroom for other automation in the org. Do not raise above 4000 for deployments into orgs with unknown automation - each chunk must leave headroom for customer triggers that fire on delete. Default: 2000.</description>
    <label>Deletion Batch Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>