projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Dml_Reserve_Rows__c.field-meta.xml
<CustomField>
    <fullName>Dml_Reserve_Rows__c</fullName>
    <description>Number of DML rows the engine reserves as a safety margin before chaining to the next processing cycle. Increase for orgs with highly connected metadata where a single component can have thousands of dependencies. Default: 750. Ref: ISP-6072</description>
    <label>DML Reserve Rows</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>