projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Dml_Safety_Margin_Rows__c.field-meta.xml
<CustomField>
    <fullName>Dml_Safety_Margin_Rows__c</fullName>
    <description>Number of database operation rows the engine reserves as a safety margin before chaining to the next processing cycle. Increase for orgs with highly connected metadata where a single component can return thousands of dependencies. Default: 750.</description>
    <label>Safety Margin (DML Rows)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>