projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Flow_Scan_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Flow_Scan_Batch_Size__c</fullName>
    <description
  >Batch size used for scans where Active Flows Only is enabled. Lower than the standard setting because each Flow node requires a separate Tooling API callout to validate its version status. Default: 15.</description>
    <label>Analysis Speed (Flow Jobs)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>