projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Is_Platform_Events_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Platform_Events_Disabled__c</fullName>
    <description>When enabled, suppresses Dependency_Scan_Status__e publish and the LWC falls back to polling every few seconds. Use when the org is approaching the daily Platform Event delivery limit. Can also be set automatically by the engine if the org exceeds 80% of the daily limit. Default: false.</description>
    <label>Is Platform Events Disabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>