projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Max_Components__c.field-meta.xml
<CustomField>
    <fullName>Max_Components__c</fullName>
    <description
  >Maximum number of dependency records this scan is allowed to create. When reached, the scan pauses automatically and prompts the user to raise the limit or accept partial results. Default: 5,000. Set to 0 to disable the cap (not recommended - the serializer will fail at high node counts). Do not raise above 5,000 without validating serializer heap capacity for your org's typical metadata depth.</description>
    <label>Maximum Components Per Scan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>