projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Max_Concurrent_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Max_Concurrent_Jobs__c</fullName>
    <description
  >Maximum number of MetaMapper scans that can run simultaneously in this org. New scan requests are rejected when this limit is reached. Raise only for orgs with large async processing capacity. Default: 2.</description>
    <label>Max Concurrent Scans</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>