projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Max_Nodes__c.field-meta.xml
<CustomField>
    <fullName>Max_Nodes__c</fullName>
    <description>Maximum number of dependency records this scan is allowed to create. When reached, the scan pauses automatically. Set to 0 to disable the cap (not recommended). Do not raise above 5000 without validating serializer heap capacity. Default: 5000. Ref: ISP-6072</description>
    <label>Max Nodes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>