projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Max_Stored_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Max_Stored_Jobs__c</fullName>
    <description>Maximum number of completed scan results retained as Salesforce Files org-wide. When a scan completes and this limit is exceeded, the oldest completed job and its result file are deleted automatically. Completed results use File Storage, not Data Storage. Default: 5.</description>
    <label>Max Stored Scans</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>