projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Retention_Hours__c.field-meta.xml
<CustomField>
    <fullName>Retention_Hours__c</fullName>
    <description>How many hours to keep Failed and Cancelled scan records before automatic deletion by the nightly cleanup batch. Completed scan results are managed by the ring buffer (Max_Stored_Jobs__c) and are not subject to this time limit. Default: 72. Minimum 1. Recommended: 72+ hours for diagnostic use.</description>
    <label>Retention Hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>