projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Scan_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Scan_Batch_Size__c</fullName>
    <description
  >Number of unprocessed dependency records fetched and analyzed per scan processing cycle (non-Flow scans). Lower this value if scans pause due to complexity or governor limit errors. Default: 50.</description>
    <label>Analysis Speed (Standard)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>