projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Stall_Detection_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Stall_Detection_Threshold__c</fullName>
    <description>Number of consecutive processing cycles with zero new components before the engine pauses the scan and alerts the user. Prevents infinite loops caused by pathological metadata structures. Default: 5. Ref: ISP-6072</description>
    <label>Stall Detection Threshold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>