projects/meta-mapper/force-app/main/default/objects/MetaMapper_Settings__mdt/fields/Storage_Reserve_MB__c.field-meta.xml
<CustomField>
    <fullName>Storage_Reserve_MB__c</fullName>
    <description>Minimum free data storage in megabytes required before a new scan is accepted. Checked at scan submission using org storage limits. If free storage is below this value the scan is rejected with a clear message. Default: 50MB. Ref: ISP-6072</description>
    <label>Storage Reserve MB</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>